# swagger.json
@@ -40,9 +40,6 @@
                 "description": null,
                 "parameters": [
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "responses": {
                 }
             }
@@ -68,9 +65,6 @@
                         }
                     }
                 ],
-                "produces": [
-                    "application/json"
-                ],
                 "responses": {
                 }
             }
@@ -93,9 +87,6 @@
                     "Products"
                 ],
                 "description": null,
-                "produces": [
-                    "application/json"
-                ],
                 "responses": {}
             }
         },
@@ -117,9 +108,6 @@
                 "tags": [
                     "Products"
                 ],
-                "consumes":[
-                    "application/x-www-form-urlencoded"
-                ],
                 "parameters": [
                     {
                         "name": "formData",
@@ -135,7 +123,7 @@
             }
         },
 
-        "/createShip/{channel}/{org}": {
+        "/createShipment/{channel}/{org}": {
             "parameters": [
                 { "$ref": "#/parameters/channel" },
                 { "$ref": "#/parameters/organization" }
@@ -147,23 +135,20 @@
                 "description": null,
                 "parameters": [
                     {
-                        "name": "ship",
+                        "name": "shipment",
                         "in": "body",
                         "description": "Shipment that we want to create",
                         "schema": {
-                            "$ref": "#/definitions/Ship"
+                            "$ref": "#/definitions/Shipment"
                         }
                     }
-                ],
-                "produces": [
-                    "application/json"
                 ],
                 "responses": {
                 }
             }
         },
 
-        "/readShip/{channel}/{org}/{id}": {
+        "/readShipment/{channel}/{org}/{id}": {
             "parameters": [
                 { "$ref": "#/parameters/channel" },
                 { "$ref": "#/parameters/organization" },
@@ -180,14 +165,11 @@
                     "Shipment"
                 ],
                 "description": null,
-                "produces": [
-                    "application/json"
-                ],
                 "responses": {}
             }
         },
 
-        "/updateShip/{channel}/{org}/{id}": {
+        "/updateShipment/{channel}/{org}/{id}": {
             "parameters": [
                 { "$ref": "#/parameters/channel" },
                 { "$ref": "#/parameters/organization" },
@@ -204,16 +186,13 @@
                 "tags": [
                     "Shipment"
                 ],
-                "consumes":[
-                    "application/x-www-form-urlencoded"
-                ],
                 "parameters": [
                     {
                         "name": "formData",
                         "in": "body",
-                        "description": "Shipment that we want to create",
+                        "description": "Shipment that we want to update",
                         "schema": {
-                            "$ref": "#/definitions/Ship"
+                            "$ref": "#/definitions/Shipment"
                         }
                     }
                 ],
@@ -222,7 +201,7 @@
             }
         },
 
-        "/updateShipLocation/{channel}/{org}/{id}": {
+        "/updateShipmentLocation/{channel}/{org}/{id}": {
             "parameters": [
                 { "$ref": "#/parameters/channel" },
                 { "$ref": "#/parameters/organization" },
@@ -328,7 +307,7 @@
             }
         },
 
-        "Ship": {
+        "Shipment": {
             "required": [
                 "id"
             ],
@@ -338,7 +317,7 @@
                     "uniqueItems": true
                 },
                 
-                "products": {
+                "productsState": {
                     "type": "array",
                     "items": {
                         "$ref" : "#/definitions/Product"
